# Digital-Social-Score

./: .dockerignore  .env.example  .gcloudignore  .gitignore  BUILD_SUCCESS_REPORT.md  CACHE_OPTIMIZATIONS_RECAP.md  CACHE_OPTIMIZATION_GUIDE.md  CLOUDBUILD_FIX.md  CLOUDBUILD_FIX_SUMMARY.md  COHERENCE_REPORT.md  DEPLOYMENT_READY.txt  DOCUMENTATION_CLEANUP_SUMMARY.md  Digital-SS-Nico (1).ipynb  Digital-SS-Nico.ipynb  Digital-SS-Ricky.ipynb  Dockerfile  EXECUTIVE_SUMMARY.md  GITHUB_CLOUDBUILD_ALIGNMENT.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_UV_RECAP.md  ML_CONDITIONAL_DEPLOYMENT_GUIDE.md  PIPELINE_FIXES_APPLIED.md  PIPELINE_NLTK_OPTIMIZED.md  PIPELINE_RESOLUTION_COMPLETE.md  QUICKSTART.md  README.md  REGION_MIGRATION_COMPLETE.md  SOLUTION_FINALE.md  TESTING_COMPLETE.md  TRIGGER_SETUP_GUIDE.md  UV_FIXES.md  cleaned_training_sample.csv  cloudbuild-simple.yaml  cloudbuild.yaml  config.py  deployment.yaml  docker-compose.yml  pyproject.toml  pytest.ini  (+8 more)
app/: __init__.py  gdpr_handler.py  main.py  models.py  toxicity_detector.py
data/: cleaned_training_sample.csv  output.csv  prod.csv  test_train.csv
deployment/: CICD_COMPLETE_GUIDE.md  DELIVERY_SUMMARY.md  DEPLOYMENT_COMPLETE_CHECKLIST.md  K8S_DEPLOYMENT_GUIDE.md  README.md  cloudbuild_bert.yaml
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CLOUDBUILD_IMPROVEMENTS.md  DEPLOYMENT_GUIDE.md  FILES_CREATED_DEPLOYMENT_SESSION.md  FINAL_DELIVERY_SUMMARY.txt  GDPR_COMPLIANCE.md  SESSION_SUMMARY.md  TESTING.md  TESTING_FRAMEWORK_READY.md  UV_GUIDE.md
examples/: api_usage_example.py  step1_data_anonymization.py
files/: CLOUDBUILD_IMPROVEMENTS.md  COMPLETE_FILE_INDEX.md  FILES_CREATED.txt  GLOBAL_GUIDE.md  Makefile  PIPELINE_SETUP.md  START_HERE.md  STRUCTURE_OPTIMAL.md  TESTING_SETUP.md
k8s/: deployment.yaml
kubernetes/: deployment.yaml  hpa.yaml  monitoring.yaml
models/: model.joblib  vectorizer.joblib
monitoring/: prometheus.yml
scripts/: cleanup_cloudbuild.sh  deploy-manual.sh  migrate_to_uv.sh  prepare_training_data.sh  setup_cache_bucket.sh  test_framework_checklist.py  test_ml_pipeline.sh  verify_consistency.py  visualize_testing_setup.py
src/: Dockerfile  Dockerfile.optimized  __init__.py  app.py  app1.py  cloudbuild.yaml  config.py  deployment.yaml  gunicorn_conf.py  requirements.txt  submit_pipeline.py  submit_vertex_pipeline.py  train.py  trigger_pipeline.py
test_charge/: test.ipynb  test_queries.py
tests/: TEST_TEMPLATE.py  __init__.py  (+5 more)
(+31 files in other folders)
