# pyproject.toml - Configuration pour uv et projet Python moderne
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-social-score"
version = "1.0.0"
description = "Digital Social Score API - Détection de toxicité avec ML"
authors = [
    {name = "Digital Social Score Team", email = "team@digital-social-score.com"}
]
readme = "README.md"
requires-python = ">=3.10"

# Dépendances principales (reprises de requirements.txt)
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "scikit-learn==1.3.2",
    "nltk==3.8.1",
    "kfp==2.5.0",
    "google-cloud-aiplatform==1.38.1",
    "google-cloud-storage==2.10.0",
    "google-cloud-secret-manager==2.25.0",
    "transformers==4.36.0",
    "torch==2.2.0",
    "datasets==2.15.0",
    "accelerate==0.25.0",
    "jsonschema==4.20.0",
    "requests==2.31.0",
    "python-multipart==0.0.6",
    "Pillow==10.1.0",
    "matplotlib==3.8.2",
    "seaborn==0.13.0",
    "plotly==5.17.0",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
    "aiofiles==23.2.1",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "tqdm==4.66.1"
]

# Dépendances de développement/test
[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "pytest-asyncio==0.21.1",
    "pytest-timeout==2.2.0",
    "pytest-mock==3.12.0",
    "httpx==0.25.2",
    "responses==0.24.1",
    "faker==21.0.0"
]

dev = [
    "black==23.12.0",
    "isort==5.13.2",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "bandit==1.7.5"
]

# Configuration des outils
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "pipeline: Pipeline tests",
    "ml: Machine learning tests",
    "slow: Slow tests"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true